projects/examples/source/03.03.07.cpp
//////////////////////////////////////

#include <tuple>
#include <utility>

//////////////////////////////////////

struct Entity {};

//////////////////////////////////////

auto test_v1() 
{ 
	return Entity(); 
}

//////////////////////////////////////

auto test_v2() 
{ 
	Entity entity;

//  ----------------------------------

//	return std::move(entity); // error

//  ----------------------------------
	
	return entity;
}

//////////////////////////////////////

int main()
{
    std::ignore = test_v1();
	
	std::ignore = test_v2();
}

//////////////////////////////////////